--- a/registration_page.html
+++ b/registration_page.html
@@ -1,183 +1,134 @@
-<!-- 🔹 registration_page.html --><!DOCTYPE html><html lang="ar">
+<!DOCTYPE html>
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تسجيل حساب جديد - موقع التوظيف</title>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      appId: "YOUR_APP_ID"
-    };firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
-
-  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>إنشاء حساب - شغلني</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
+    }
+
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: Arial, sans-serif;
       direction: rtl;
-      background-color: #f9f9f9;
+      background: linear-gradient(to right, #f9f9f9, #e0f0ff);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    form {
-      max-width: 600px;
-      margin: 50px auto;
-      background-color: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    label {
-      font-weight: bold;
-    }
-    input, select, button {
+
+    .container {
       width: 100%;
-      margin-top: 10px;
-      padding: 10px;
+      max-width: 450px;
+      background-color: #fff;
+      padding: 30px 25px;
+      border-radius: 12px;
+      border: 2px solid #007BFF;
+      box-shadow: 0 0 20px rgba(0, 123, 255, 0.2);
     }
+
+    h2 {
+      text-align: center;
+      color: #007BFF;
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 20px;
+      border: 1.8px solid #007BFF;
+      border-radius: 8px;
+      font-size: 1em;
+      transition: 0.3s;
+    }
+
+    input:focus, select:focus {
+      border-color: #0056b3;
+      box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+      outline: none;
+    }
+
     button {
+      width: 100%;
       background-color: #007BFF;
       color: white;
+      padding: 14px;
+      font-size: 1.1em;
       border: none;
+      border-radius: 8px;
       cursor: pointer;
+      transition: 0.3s;
     }
-    .form-footer {
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .footer-text {
+      margin-top: 20px;
       text-align: center;
-      margin-top: 15px;
+      font-size: 0.95em;
+    }
+
+    .footer-text a {
+      color: #007BFF;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .footer-text a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <form onsubmit="return registerUser(event)">
-    <h2>معلومات الحساب</h2>
-    <label for="name">الاسم الكامل:</label>
-    <input type="text" id="name" required><label for="email">البريد الإلكتروني:</label>
-<input type="email" id="email" required>
 
-<label for="password">كلمة المرور:</label>
-<input type="password" id="password" required>
+  <div class="container">
+    <h2>إنشاء حساب جديد</h2>
+    <form id="registerForm">
+      <label for="name">الاسم الكامل:</label>
+      <input type="text" id="name" name="name" required placeholder="مثال: محمد أحمد" />
 
-<label for="role">نوع الحساب:</label>
-<select id="role" required>
-  <option value="employee">موظف</option>
-  <option value="employer">صاحب عمل</option>
-</select>
+      <label for="email">البريد الإلكتروني:</label>
+      <input type="email" id="email" name="email" required placeholder="example@email.com" />
 
-<button type="submit">تسجيل</button>
-<div class="form-footer">
-  <p>هل لديك حساب؟ <a href="login_page.html">تسجيل الدخول</a></p>
-</div>
+      <label for="password">كلمة المرور:</label>
+      <input type="password" id="password" name="password" required placeholder="********" />
 
-  </form>  <script>
-    function registerUser(event) {
-      event.preventDefault();
-      const name = document.getElementById("name").value;
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const role = document.getElementById("role").value;
+      <label for="role">نوع الحساب:</label>
+      <select id="role" name="role" required>
+        <option value="" disabled selected>اختر نوع الحساب</option>
+        <option value="employee">موظف</option>
+        <option value="employer">صاحب عمل</option>
+      </select>
 
-      auth.createUserWithEmailAndPassword(email, password)
-        .then(userCredential => {
-          const user = userCredential.user;
-          return user.updateProfile({ displayName: name })
-            .then(() => {
-              return db.collection("users").doc(user.uid).set({
-                name,
-                email,
-                role,
-                uid: user.uid
-              });
-            });
-        })
-        .then(() => {
-          alert("تم إنشاء الحساب بنجاح");
-          window.location.href = "login_page.html";
-        })
-        .catch(error => {
-          alert("خطأ: " + error.message);
-        });
-    }
-  </script></body>
-</html><!-- 🔹 login_page.html --><!DOCTYPE html><html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تسجيل الدخول - موقع التوظيف</title>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
+      <button type="submit">تسجيل</button>
+    </form>
+
+    <div class="footer-text">
+      <p>هل لديك حساب؟ <a href="login_page.html">تسجيل الدخول</a></p>
+    </div>
+  </div>
+
   <script>
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      appId: "YOUR_APP_ID"
-    };firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-
+    document.getElementById("registerForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+      // هنا يمكنك الربط مع Firebase
+      alert("تم تسجيل الحساب بنجاح (مثال فقط)");
+    });
   </script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      direction: rtl;
-      background-color: #f9f9f9;
-    }
-    form {
-      max-width: 600px;
-      margin: 50px auto;
-      background-color: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    label {
-      font-weight: bold;
-    }
-    input, button {
-      width: 100%;
-      margin-top: 10px;
-      padding: 10px;
-    }
-    button {
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    .form-footer {
-      text-align: center;
-      margin-top: 15px;
-    }
-  </style>
-</head>
-<body>
-  <form onsubmit="return loginUser(event)">
-    <h2>دخول</h2>
-    <label for="email">البريد الإلكتروني:</label>
-    <input type="email" id="email" required><label for="password">كلمة المرور:</label>
-<input type="password" id="password" required>
 
-<button type="submit">دخول</button>
-<div class="form-footer">
-  <p>ليس لديك حساب؟ <a href="registration_page.html">تسجيل حساب جديد</a></p>
-</div>
-
-  </form>  <script>
-    function loginUser(event) {
-      event.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then(userCredential => {
-          window.location.href = "account.html";
-        })
-        .catch(error => {
-          alert("البريد الإلكتروني أو كلمة المرور غير صحيحة");
-        });
-    }
-  </script></body>
+</body>
 </html>
