--- a/login_page.html
+++ b/login_page.html
@@ -108,7 +108,7 @@
     </form>
 
     <div class="footer-text">
-      <p>ليس لديك حساب؟ <a href="register_page.html">إنشاء حساب جديد</a></p>
+      <p>ليس لديك حساب؟ <a href="registration_page.html">إنشاء حساب جديد</a></p>
     </div>
   </div>
 
