--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="container mx-auto px-6 flex flex-col md:flex-row items-center">  
         <div class="md:w-1/2 mb-10 md:mb-0">  
             <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-6">  
-                نوفر لك أفضل الفرص الوظيفية في السودان  
+             نربط بين الشركات والموظفين علئ ارض الواقع بطريقة سهلة وبسيطة  
             </h1>  
             <p class="text-xl mb-8">  
                 منصة "شغلني" تربط بين أصحاب العمل والموظفين المؤهلين بطريقة سهلة وآمنة  
