--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             </div>  
               
             <div class="flex items-center space-x-4 rtl:space-x-reverse">  
-                <a href="#" class="px-4 py-2 text-blue-600 border border-blue-600 rounded-lg hover:bg-blue-50">تسجيل دخول</a>  
-                <a href="#" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">إنشاء حساب</a>  
+                <a href="#" class="px-4 py-2 text-blue-600 border border-blue-600 rounded-lg hover:bg-blue-50"> الوظائف المتاحة</a>  
+                <a href="#" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">الموظفون المتاحون</a>  
                 <button class="md:hidden focus:outline-none">  
                     <i class="fas fa-bars text-gray-600 text-xl"></i>  
                 </button>  
