--- a/employee_listing_page.html
+++ b/employee_listing_page.html
@@ -224,8 +224,8 @@
                         <div class="flex items-center space-x-4 rtl:space-x-reverse">
                             <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="صورة الموظف" class="w-16 h-16 rounded-full border-2 border-white shadow">
                             <div>
-                                <h3 class="font-bold text-lg">محمد أحمد</h3>
-                                <p class="text-gray-600">مطور ويب</p>
+                                <h3 class="font-bold text-lg"> محمد احمد</h3>
+                                <p class="text-gray-600">عامل بناء </p>
                             </div>
                         </div>
                         <span class="px-3 py-1 rounded-full badge-primary text-xs font-semibold">مُتاح</span>
@@ -234,7 +234,7 @@
                     <div class="mt-4">
                         <div class="flex items-center text-gray-600 text-sm mb-2">
                             <i class="fas fa-map-marker-alt ml-1"></i>
-                            <span>الخرطوم، السودان</span>
+                            <span>الخرطوم،السجانة، السودان</span>
                         </div>
                         <div class="flex items-center text-gray-600 text-sm mb-3">
                             <i class="fas fa-briefcase ml-1"></i>
@@ -244,10 +244,10 @@
                         <div class="mb-4">
                             <h4 class="font-semibold text-sm mb-2">المهارات:</h4>
                             <div class="flex flex-wrap">
-                                <span class="skill-tag">HTML</span>
-                                <span class="skill-tag">CSS</span>
-                                <span class="skill-tag">JavaScript</span>
-                                <span class="skill-tag">React</span>
+                                <span class="skill-tag">عامل بناء</span>
+                                <span class="skill-tag">تركيب سيراميك</span>
+                                <span class="skill-tag">ديكور</span>
+                                <span class="skill-tag">دهان</span>
                             </div>
                         </div>
                         
@@ -255,19 +255,19 @@
                         <div class="mb-4">
                             <h4 class="font-semibold text-sm mb-2">أعمال سابقة:</h4>
                             <div class="flex space-x-2 rtl:space-x-reverse overflow-x-auto py-2">
-                                <img src="https://via.placeholder.com/300x200/3b82f6/ffffff?text=Project+1" 
+                                <img src="im8.jpg" 
                                      alt="عمل سابق 1" 
                                      class="work-thumbnail"
                                      onclick="openWorkGallery(0)">
-                                <img src="https://via.placeholder.com/300x200/10b981/ffffff?text=Project+2" 
+                                <img src="im5.jpg" 
                                      alt="عمل سابق 2" 
                                      class="work-thumbnail"
                                      onclick="openWorkGallery(1)">
-                                <img src="https://via.placeholder.com/300x200/f59e0b/ffffff?text=Project+3" 
+                                <img src="im7.jpg" 
                                      alt="عمل سابق 3" 
                                      class="work-thumbnail"
                                      onclick="openWorkGallery(2)">
-                                <img src="https://via.placeholder.com/300x200/ef4444/ffffff?text=Project+4" 
+                                <img src="im4.jpg" 
                                      alt="عمل سابق 4" 
                                      class="work-thumbnail"
                                      onclick="openWorkGallery(3)">
